# KiwiSDR-AI-Listener-

./: .gitignore  .gitmodules  README.md  create_dummy_audio.py  main.py  pyproject.toml  pytest.ini
src/: evaluate.py  test_asr.py  test_auto_tuner.py  test_kiwi.py  test_scheduler.py  test_translator.py
src/core/: asr_engine.py  auto_tuner.py  controller.py  database.py  discovery.py  feature_extractor.py  interfaces.py  kiwi_adapter.py  mock_adapter.py  queue.py  scheduler.py  translator.py  workers.py
src/web/: server.py
src/web/static/: app.js  index.html  style.css
