[project]
name = "kiwisdr-ai-listener"
version = "0.1.0"
description = "Autonomous KiwiSDR AI Listener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.3",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "litellm>=1.41.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
]
